Endre POST /land/oppslag -> GET /landgrupper og returner liste med alle landgrupper.
