# openapi/src/main/resources/soknad-orkestrator-api.yaml
@@ -58,9 +58,9 @@ paths:
       responses:
         '200':
           description: Svar ble lagret
-  /land/oppslag:
-    post:
-        summary: Hent landlister for gitte landgrupper
+  /landgrupper:
+    get:
+        summary: Hent landlister for alle landgrupper
         responses:
           '200':
             description: Liste med landgrupper returnert
@@ -70,28 +70,6 @@ paths:
                   type: array
                   items:
                     $ref: '#/components/schemas/Landgruppe'
-          '400':
-            description: Ugyldig request body
-            content:
-              application/json:
-                schema:
-                  type: string
-                  example: Kunne ikke parse request body til liste med landgrupper
-        requestBody:
-          required: true
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: string
-                  enum:
-                    - NORGE
-                    - STORBRITANNIA
-                    - EØS_OG_SVEITS
-                    - TREDJELAND
-                description: Liste med landgrupper
-
 components:
   schemas:
     OrkestratorSoknad:
